--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     // 基础库
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     // 功能库
-    compile group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.7.24'
+//    compile group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.7.24'
+    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.0.0'
     compile "org.apache.calcite:calcite-core:$calcite_version"
     compile group: 'org.apache.hbase', name: 'hbase-client', version: "$hbaseclient_version"
     compile "org.apache.tephra:tephra-api:$tephra_version"
